--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,16 @@
-name : CI / CD Pipeline
-on:
-push :
-branches :
-- main
-jobs :
-test :
-runs - on: ubuntu - latest
-steps :
-- name : Checkout Code
-uses : actions / checkout@v3
-- name : Set up Python
-uses : actions / setup - python@v4
-with :
-python - version : ’3.x’
-- name : Install Dependencies
-run : pip install -r hello - devops / requirements . txt
-- name : Run Tests
-run : python -m unittest discover -s hello - devops
-deploy :
-runs - on: ubuntu - latest
-needs : test
-steps :
-- name : Deploy App
-run : echo " Deploying application ... "
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9"]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+
+  notify:
+    needs: [test]
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Notifying Slack... (simulation)"
